# solopreneur-skills

./: README.md
reference/: claude-code.md
skills/: deploy.md  develop-agent.md  develop-backend.md  develop-frontend.md  generate-dev-doc.md  setup-permissions.md
skills/business/: analyze-competitors.md  generate-brd.md  plan-launch.md
skills/deployment/: deploy-aws.md  deploy-cloudflare.md  deploy-vercel.md  deploy.md
skills/development/: develop-agent.md  develop-backend.md  develop-frontend.md  generate-dev-doc.md  setup-permissions.md
templates/: dev-doc.md
templates/agent/: .env.template  .gitignore  CLAUDE.md  Dockerfile  builddeploy.sh  pyproject.toml
templates/agent/prompts/: system.md
templates/agent/skills/: explain-code.md  refactor.md  review-code.md
templates/agent/src/: cli.py  config.py  logger.py  main.py  schemas.py  server.py  types.py
templates/agent/src/engine/: __init__.py  agent_loop.py  llm.py
templates/agent/src/permissions/: __init__.py  checker.py
templates/agent/src/skills/: __init__.py  loader.py
templates/agent/src/tools/: __init__.py  base.py  registry.py
templates/agent/src/tools/builtin/: agent_tool.py  ask_user.py  bash.py  edit_file.py  glob_tool.py  grep_tool.py  read_file.py  web_fetch.py  write_file.py
templates/agent/tests/: test_permissions.py  test_skills.py  test_tools.py
templates/backend/: .env.template  .eslintrc.json  .gitignore  .prettierrc  .sequelizerc  CLAUDE.md  Dockerfile  README.md  appspec.yml  builddeploy.sh  nodemon.json  package-lock.json  package.json  tsconfig.json
(+48 files in other folders)
